# juce-synth

./: .gitignore  CMakeLists.txt  README.md
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SynthSound.cpp  SynthSound.h  SynthVoice.cpp  SynthVoice.h
